--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,81 @@
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>Mon application Ionic</h1>
+
+  <button ion-button color="primary" block (click)="goToChat()">Chatter</button>
+
+  <ion-card>
+    <form (ngSubmit)="goToChat(loginForm)" #loginForm="ngForm">
+      <ion-item>
+        <ion-label floating>Login</ion-label>
+        <ion-input type="text" name="login" ngModel></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Email</ion-label>
+        <ion-input type="email" name="email" ngModel></ion-input>
+      </ion-item>
+      <button ion-button type="submit" block>Chatter</button>
+
+    </form>
+  </ion-card>
+
+  <ion-item>
+    <ion-label floating>Rechercher</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+  <ion-list radio-group>
+    <ion-item>
+      <ion-label>Par nom</ion-label>
+      <ion-radio checked="true" value="name"></ion-radio>
+    </ion-item>
+    <ion-item>
+      <ion-label>Par email</ion-label>
+      <ion-radio value="email"></ion-radio>
+    </ion-item>
+  </ion-list>
+  <button ion-button color="primary" block (click)="search()">Rechercher</button>
+
+  <ion-list>
+    <ion-list-header>Mes contacts</ion-list-header>
+
+    <ion-card *ngFor="let user of users">
+      <ion-card-header>
+        <ion-icon name="contact">{{user.name}}</ion-icon>
+      </ion-card-header>
+      <ion-card-content>
+        <p><span>email: </span><span>{{user.email}}</span></p>
+      </ion-card-content>
+      <button ion-button color="dark" small block>Editer</button>
+    </ion-card>
+    
+  </ion-list>
+
+  <ion-card>
+    <ion-card-header>
+      <h2>En-tête de ma zone</h2>
+    </ion-card-header>
+
+    <ion-card-content>
+      <p>C'est la lune ! </p>
+
+      <button ion-button color="dark" small block icon-left>
+        Image suivante
+      </button>
+    </ion-card-content>
+  </ion-card>
+
+  <button ion-button>Suivant</button>
+  <button ion-button="danger">Supprimer</button>
+  <button ion-button="danger">Supprimer</button>
+  <button ion-button="danger">Supprimer</button>
+  <button ion-button="dark">Suivant</button>
+
+  <button ion-button color="dark" small block icon-left>
+    <ion-icon name="add-circle" color="danger"></ion-icon>
+    Ajouter un utilisateur
+  </button>
+
 </ion-content>
